# nhm-django-infra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.ar.md  README.en.md  README.hi.md  README.ja.md  README.md  README.zh-TW.md  data.json  pyproject.toml  readme.md
.github/workflows/: build.yml  codeql.yml  coverage-comment.yml  coverage.yml  post-coverage-comment.yml  readme.yml
backend/: .envrc
backend/porsche/: settings.py  urls.py
backend/porsche/core/restframework/: viewsets.py
deployment/: Dockerfile  docker-compose.yaml  entrypoint.sh  gunicorn.py
deployment/postgres/docker-entrypoint-initdb.d/: init-db.sh
deployment/redis/: redis-full.conf  redis.conf
docs/: README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.zh-TW.md  README.zh.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_046bfc7932c6e0e4_apps_py.html  z_046bfc7932c6e0e4_asgi_py.html  z_046bfc7932c6e0e4_settings_py.html  z_046bfc7932c6e0e4_urls_py.html  z_046bfc7932c6e0e4_wsgi_py.html  z_0fec581c501056c1___init___py.html  z_0fec581c501056c1_exceptions_py.html  z_0fec581c501056c1_fields_py.html  z_0fec581c501056c1_generic_py.html  z_0fec581c501056c1_pagination_py.html  z_0fec581c501056c1_response_py.html  z_0fec581c501056c1_serializer_py.html  z_0fec581c501056c1_test_py.html  z_0fec581c501056c1_view_py.html  z_0fec581c501056c1_viewsets_py.html  z_1825aeb1d125d4d6___init___py.html  z_1825aeb1d125d4d6_action_py.html  z_1825aeb1d125d4d6_code_py.html  z_1be7582381ad9283___init___py.html  z_2056c06653b654de___init___py.html  z_236d99788d7743b1___init___py.html  z_236d99788d7743b1_asgi_py.html  z_236d99788d7743b1_wsgi_py.html  z_2f1ba49c95148a23_company_py.html  z_52611562c40117af_validators_py.html  z_531e64a729c96bad___init___py.html  z_531e64a729c96bad_company_py.html  z_531e64a729c96bad_health_py.html  z_55b7205006f82b48___init___py.html  z_55b7205006f82b48_base_py.html  z_55b7205006f82b48_enums_py.html  z_77e4dcf7650738f0___init___py.html  z_77e4dcf7650738f0_company_py.html  z_77e4dcf7650738f0_health_py.html  z_77e4dcf7650738f0_tag_py.html  z_77e4dcf7650738f0_urls_py.html  (+45 more)
src/: manage.py
src/porsche/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
src/porsche/api/endpoints/: __init__.py  company.py  health.py  tag.py  urls.py  user.py
src/porsche/api/filters/: company.py
src/porsche/api/serializers/: company.py  health.py  tag.py  user.py
src/porsche/core/: constants.py  exceptions.py
src/porsche/core/django/: constants.py  validators.py
src/porsche/core/drfspectacular/: schemas.py
src/porsche/core/restframework/: __init__.py  exceptions.py  fields.py  generics.py  mixins.py  pagination.py  request.py  response.py  router.py  schemas.py  serializer.py  test.py  validators.py  views.py  viewsets.py
src/porsche/management/commands/: mcp.py
src/porsche/migrations/: 0001_initial.py  0002_role_user.py  0002_tag_alter_company_name.py  0003_alter_user_avatar.py  0003_companytag.py  0004_alter_company_options_alter_companytag_options_and_more.py
src/porsche/models/: __init__.py  company.py  tag.py  user.py
src/porsche/models/constants/: types.py
src/porsche/models/enums/: __init__.py  action.py  cache.py  code.py  database.py
src/porsche/tests/: __init__.py  asgi.py  wsgi.py
src/porsche/tests/api/: __init__.py
src/porsche/tests/core/: __init__.py
src/porsche/tests/models/: user.py
src/porsche/utils/: error.py  log.py  text.py
(+29 files in other folders)
