[project]
name = "nhm-django-infra"
version = "1.0.0"
description = "A Django-based infrastructure project providing backend services for the Porsche application, featuring REST API support, PostgreSQL database integration, and development workflow automation tools."
authors = [
    { name = "xuheng.zong", email = "79689669+nohairman@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.0",
    "dynaconf>=3.2.7",
    "djangorestframework>=3.15.2",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.9",
    "ujson>=5.11.0",
    "redis>=6.4.0",
    "django-redis>=6.0.0",
    "drf-yasg>=1.21.11",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.6",
    "genbadge[coverage]>=1.1.2",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
src_paths = ["src"]
py_version = 313
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["porsche"]
multi_line_output = 3
line_length = 120


[tool.coverage.run]
branch = true
concurrency = [
    "thread",
]
core = "ctrace"
data_file = ".coverage"
disable_warnings = []
source = [
    "src/porsche",
]
omit = [
    "src/porsche/tests/*",
]
relative_files = true

[tool.coverage.report]
exclude_also = []
format = "text"
sort = "Name"
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.coverage.json]
output = ".coverage.json"
pretty_print = true

[tool.coverage.xml]
output = ".coverage.xml"
